# mancalafish

./: CMakeLists.txt  README.md
src/: engine.c  engine.h  engine_avx2.c  engine_cli.c  player.c  utils.c
src/include/: engine.h  engine_avx2.h  utils.h
